    Thanks to intrigeri for the patch.
  * mailscripts.el:
    - Change prompt "branch name" -> "new branch name".
      When the user inputs a branch name, it is used only to attempt the
      creation of a new branch, but the old prompt suggests that inputting
      an existing branch name would cause that branch to be checked out.
  * Add mailing list info to CONTRIBUTING.md.

 -- Sean Whitton <spwhitton@spwhitton.name>  Fri, 27 Mar 2020 11:50:27 -0700

mailscripts (0.19-1) unstable; urgency=medium

  * notmuch-slurp-debbug: rework to use Mail::Box rather than shelling out
    to scripts to move mail around.
    - Drop dependency on libmime-tools-perl.
  * imap-dl:
    - Update documentation to be less oriented towards former users of
      getmail (Closes: #953582).
      Thanks to Daniel Kahn Gillmor for the patch.
    - Allow specifying ssl_ciphers.
      Thanks to Robbie Harwood for the patch.
    - Add support for GSSAPI authentication.
      Thanks to Robbie Harwood for the patch and Daniel Kahn Gillmor for
      review.

 -- Sean Whitton <spwhitton@spwhitton.name>  Fri, 20 Mar 2020 13:12:58 -0700

mailscripts (0.18-1) unstable; urgency=medium

  * notmuch-extract-patch: rewrite:
    - Split into notmuch-extract-patch(1) and mbox-extract-patch(1).
    - Don't require -v when only one series in thread (Closes: #951218).
      + When there is no -v, extract the patch series with the highest
        reroll count that we see.
    - New --trailers and --cover-letter-trailers features (Closes: #951211).
      + --trailers is on by default; use --no-trailers to disable.
    - Stop outputting message subjects on standard error.
  * New dependencies on liblist-moreutils-perl, libmail-box-perl.
  * mailscripts.el: instead of defaulting to passing --reroll-count=1 to
    notmuch-extract-patch, don't pass any reroll count unless there is a
    prefix arg.

 -- Sean Whitton <spwhitton@spwhitton.name>  Sat, 15 Feb 2020 15:10:56 -0700
